--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -8,9 +8,27 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto"
         tools:targetApi="31">
+        <activity
+            android:name=".HistorialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SalidaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EnvioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Register_activity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuLateral"
+            android:exported="false"
+            android:label="@string/title_activity_menu_lateral"
+            android:theme="@style/Theme.Proyecto.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
