--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto"
         tools:targetApi="31">
+
         <activity
             android:name=".HistorialActivity"
             android:exported="false" />
@@ -38,6 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+      <meta-data
+          android:name="preloaded_fonts"
+          android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
