--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto"
         tools:targetApi="31">
-
+        <activity
+            android:name=".FileActivity"
+            android:exported="false" />
         <activity
             android:name=".HistorialActivity"
             android:exported="false" />
@@ -40,9 +42,9 @@
             </intent-filter>
         </activity>
 
-      <meta-data
-          android:name="preloaded_fonts"
-          android:resource="@array/preloaded_fonts" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
